objects/Premium_Calculation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Age_Lower__c</fullName>
        <label>Age Lower</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_Upper__c</fullName>
        <label>Age Upper</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverage_Lower__c</fullName>
        <label>Coverage Lower</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage_Upper__c</fullName>
        <label>Coverage Upper</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage__c</fullName>
        <label>Coverage</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nicotine__c</fullName>
        <label>Nicotine</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Premium Calculation</label>
</CustomObject>